[package]
name = "cute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "bytecode",
    "compiler",
    "vm"
]

[dependencies]
bytecode = { path = "bytecode" }
compiler = { path = "compiler" }
vm = { path = "vm" }
